apps/tandoor/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: tandoor
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`recipes.trivernis.dev`, `recipes.trivernis.net`, `food.trivernis.net`) && PathPrefix(`/media`, `/static`)
    kind: Rule
    middlewares:
      - name: security-headers
        namespace: default
    services:
    - name: tandoor
      port: static
  - match: Host(`recipes.trivernis.dev`, `recipes.trivernis.net`, `food.trivernis.net`)
    kind: Rule
    middlewares:
      - name: security-headers
        namespace: default
      - name: tandoor-headers
    services:
    - name: tandoor
      passHostHeader: true
      port: http
